# ATmega128_Firmware

./: Cargo.toml  LICENSE  README.md  avr-atmega128.json  bootloader.ld  build.rs
.github/: dependabot.yml
.github/workflows/: analyze.yml
examples/: bootloader_test.rs  calibration_test.rs  diagnostics_test.rs  flash_test.rs  imu_demo.rs  logger_test.rs  motor_test.rs  power_management.rs  protocol_test.rs  scheduler_test.rs  test_runner.rs
scripts/: flash.sh
src/: application.rs  config.rs  main.rs  os.rs
src/bootloader/: mod.rs
src/diagnostics/: mod.rs
src/drivers/: button_handler.rs  calibration.rs  flash.rs  led_matrix.rs  mod.rs  motor_control.rs  mpu6050.rs  sensor_fusion.rs  serial_console.rs
src/hal/: adc.rs  gpio.rs  mod.rs  power.rs  pwm.rs  spi.rs  timer.rs  twi.rs  uart.rs  watchdog.rs
src/logger/: mod.rs
src/protocol/: mod.rs  packet.rs  transport.rs
src/rtos/: scheduler.rs  task.rs
src/testing/: mod.rs
