[package]
name = "atmega128_firmware"
version = "0.1.0"
edition = "2021"
authors = ["REXIN (Fayssal Chokri)"]
repository = "https://github.com/rexinscfu/atmega128_firmware"

[dependencies]
avr-device = "0.5.1"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
ufmt = "0.2.0"
avr-hal-generic = "0.1.0"

[dev-dependencies]
embedded-hal-mock = "0.9.0"
defmt = "0.3.5"
probe-rs = "0.21.0"

[build-dependencies]
cc = "1.0.79"

[features]
default = ["atmega128"]
atmega128 = []
debug = []
release = []

[profile.dev]
opt-level = "s"
lto = true
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

[[bin]]
name = "atmega128_firmware"
test = false
bench = false

[workspace]
members = [
    ".",
] 